add new endpoint for safety
