# dinopark_status_api/apis.py
@@ -11,7 +11,7 @@ from flask_restful import Api
 
 # Local imports
 from dinopark_status_api.constants import LOGGER, API_VERSION, DATABASE_NAME, COLLECTION_NAME
-from dinopark_status_api.resources import Health, StatusMaintenance
+from dinopark_status_api.resources import Health, StatusMaintenance, StatusSafety
 
 
 class DinoparkStatusApi(Api):
@@ -100,6 +100,13 @@ class DinoparkStatusApi(Api):
                          "/maintenance_status/",
                          "/maintenance_status",
                          endpoint="maintenance_status",
+                         resource_class_kwargs={"collection": collection},  # kwargs to send to constructor of resource class
+                         strict_slashes=False)
+
+        api.add_resource(StatusSafety,
+                         "/safety_status/",
+                         "/safety_status",
+                         endpoint="safety_status",
                          resource_class_kwargs={"collection": collection},  # kwargs to send to constructor of resource class
                          strict_slashes=False)
 
